--- a/CSS/css.css
+++ b/CSS/css.css
@@ -172,7 +172,7 @@ body{
 
 /*Weather*/
 .Contents .WeatherSection{
-	background: black;
+	background: white;
     height: 500px;
     font-family: poppins;
 	letter-spacing: 2px;
@@ -183,9 +183,10 @@ body{
     border-top-style: dotted;
     border-bottom-style: dotted;
     border-width: 5px;
-    border-color: white;
+    border-color: black;
 }
 .Contents .WeatherSection .card{
+    background: #000000d0;
     border-radius: 30px;
     padding-top: 1em;
     padding-left: 1.5em;
@@ -253,7 +254,7 @@ input.search-bar:hover{
 
 /*Chart*/
 .Contents .Chart{
-    background: rgba(0, 0, 0, 0.938);
+    background: white;
     height: 500px;
     font-family: poppins;
     display: flex;
@@ -262,7 +263,7 @@ input.search-bar:hover{
     align-items: center;
     border-bottom-style: dotted;
     border-width: 5px;
-    border-color: white;
+    border-color: black;
 }
 .Contents .Chart .item2{
     padding-left: 230px;
