--- a/CSS/css.css
+++ b/CSS/css.css
@@ -12,8 +12,8 @@
     --BannerBG: url('../Images/Frog.jpg'); 
     --BannerTxtColor: #494949; 
 
-    --WeatherBG: url('../Images/Planting.jpg'); 
-    --ChartBG: url('../Images/Planting2.jpg'); 
+    --WeatherBG: url('../Images/PlantingBlur.png'); 
+    --ChartBG: url('../Images/PlantingBlur2.png'); 
     --MunicipalitiesBG: #ece8d9;
     --GISBG: #fffdf6;
     --DatasetsBG: #ece8d9;
