--- a/CSS/css.css
+++ b/CSS/css.css
@@ -13,7 +13,7 @@
     --BannerTxtColor: #494949; 
 
     --WeatherBG: url('../Images/PlantingBlur.png'); 
-    --ChartBG: url('../Images/PlantingBlur2.png'); 
+    --ChartBG: url('../Images/Orchard.png'); 
     --MunicipalitiesBG: #ece8d9;
     --GISBG: #fffdf6;
     --DatasetsBG: #ece8d9;
