--- a/CSS/css.css
+++ b/CSS/css.css
@@ -12,8 +12,8 @@
     --BannerBG: url('../Images/Frog.jpg'); 
     --BannerTxtColor: #494949; 
 
-    --WeatherBG: url('../Images/PlantingBlur.png'); 
-    --ChartBG: url('../Images/Orchard.png'); 
+    --WeatherBG: url('../Images/Plant.jpg'); 
+    --ChartBG:#ece8d9; 
     --MunicipalitiesBG: #ece8d9;
     --GISBG: #fffdf6;
     --DatasetsBG: #ece8d9;
@@ -178,7 +178,7 @@ body{
 
 /*Weather*/
 .Contents .WeatherSection{
-	background:var(--WeatherBG);
+	background:#ece8d9;
     height: 500px;
     font-family: poppins;
 	letter-spacing: 2px;
@@ -200,7 +200,6 @@ body{
     margin-right: 200px;
 }
 .Contents .WeatherSection .card-inside{
-    display: block;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
@@ -253,48 +252,6 @@ input.search-bar:hover{
     }
 }
 
-/*Feeler Chart*/
-.feeler-chart{
-    background:#00334d;
-    height: 9vh;
-    font-family: poppins;
-}
-.feeler-chart h1{
-    padding-top: 25px;
-    text-align: center;
-    color: lightgray;
-    letter-spacing: 10px;
-    font-size: 1.5vw;
-}
-
-/*Chart*/
-.Contents .Chart{
-    background: var(--ChartBG);
-    height: 500px;
-    font-family: poppins;
-    display: flex;
-    width: 100% ;
-    justify-content:space-between ;
-    align-items: center;
-}
-.Contents .Chart .item2{
-    padding-left: 230px;
-}
-.Contents .Chart .item3{
-    padding-right: 120px;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-@media (max-width: 960px){
-    .item3{
-        display: none;
-        width: 100%;
-    }
-    .item3.active{
-        display: flex;
-    }   
-}
-
 /*Feeler Crops*/
 .feeler-crops{
     background:#00334d;
@@ -308,144 +265,98 @@ input.search-bar:hover{
     letter-spacing: 10px;
     font-size: 1.5vw;
 }
+/*Crops*/
+.Crop-Section{
+    background-color: #ece8d9;
+    height: 85vh;
+}
+.Crop-Section .row1{
+    padding-top: 40px;
+    padding-left: 100px;
+    padding-right: 100px;
+    display: flex;
+    justify-content:space-between ;
+}
 
-/*Highland Crops*/
-.Contents .HighlandCrops{
-    background: var(--HighlandCropsBG);
+.Crop-Section .row2{
+    padding-top: 40px;
+    padding-left: 250px;
+    padding-right: 250px;
+    display: flex;
+    justify-content:space-between ;
+}
+.Crop-Section .veggy{
     text-align: center;
+    font-size: 0.9vw;
+    width: 15vw;
+    height: 35vh;
+    border-radius: 15px;
 }
-.Contents .HighlandCrops .VegsMenu{
-    margin-top:1px;
+.veggy:hover{
+    background-color: lightgreen;
 }
-.Contents .HighlandCrops .VegsMenu ul
-{
-    display: block;
+
+
+
+/*Feeler Season*/
+.feeler-season{
+    background:#00334d;
+    height: 9vh;
+    font-family: poppins;
 }
-.Contents .HighlandCrops .VegsMenu ul li
-{
-    list-style-type: none;
-    display: inline-block;
-}
-.Contents .HighlandCrops .VegsMenu ul li a
-{
-    text-decoration: none;
-    font-family: var(--VegsMenuFont);
-    letter-spacing: 4px;
-    font-size: 20px;
-    margin: 20px;
-    color: var(--VegsMenuTxtColor);
-}
-.Contents .HighlandCrops .VegsMenu ul li a .VegsList
-{
-    position: relative;
-    display: block;
-    padding: 7%;
-    height: 15%;
-    line-height: 15%;
+.feeler-season h1{
+    padding-top: 25px;
     text-align: center;
-    white-space: nowrap;
+    color: lightgray;
+    letter-spacing: 10px;
+    font-size: 1.5vw;
 }
-.Contents .HighlandCrops .VegsMenu ul li a ::after {
-    content:'';
-    display: block;
-    width: 0;
-    height: 3px;
-    background: #494949;
-    transition: width .3s;
-    margin-left: 15%;
-}
-.Contents .HighlandCrops .VegsMenu ul li a :hover::after {
-    width: 80%;
-    transition: width .3s;
-    margin-left: 15%;
-}
-.Contents .OuterBox .VegtableInfo{
-    background: black;
-    border-radius: 30px;
-}
-.Contents .VegtableInfo h1 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	font-size: 20px;
-    text-align: left;
-    text-indent: 50px;
-	margin: 1rem;
-    color: white;
-}
-
-
-
 /*Season*/
-.Contents .Months{
-    background: var(--SeasonsContentBG);
+.Season-Section{
+    background-color: #ece8d9;
+    height: 85vh;
+}
+.Season-Section .row1{
+    padding-top: 40px;
+    padding-left: 50px;
+    padding-right: 50px;
+    display: flex;
+    justify-content:space-between ;
+}
+
+.Season-Section .row2{
+    padding-top: 40px;
+    padding-left: 50px;
+    padding-right: 50px;
+    display: flex;
+    justify-content:space-between ;
+}
+.Season-Section .months{
     text-align: center;
+    font-size: 0.9vw;
+    width: 13.5vw;
+    height: 35vh;
+    border-radius: 15px;
 }
-.Contents .Months h2 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
+.months:hover{
+    background-color: lightskyblue;
 }
-.Contents .Months .MonthsMenu{
-    margin-top:30px;
+
+
+
+/*Feeler Municipalities*/
+.feeler-municipalities{
+    background:#00334d;
+    height: 9vh;
+    font-family: poppins;
 }
-.Contents .Months .MonthsMenu ul
-{
-    display: block;
-}
-.Contents .Months .MonthsMenu ul li
-{
-    list-style-type: none;
-    display: inline-block;
-}
-.Contents .Months .MonthsMenu ul li a
-{
-    text-decoration: none;
-    font-family: var(--MonthsMenuFont);
-    letter-spacing: 4px;
-    font-size: 20px;
-    margin: 20px;
-    color: var(--MonthsMenuTxtColor);
-}
-.Contents .Months .MonthsMenu ul li a .MonthsList
-{
-    position: relative;
-    display: block;
-    padding: 7%;
-    height: 15%;
-    line-height: 15%;
+.feeler-municipalities h1{
+    padding-top: 25px;
     text-align: center;
-    white-space: nowrap;
+    color: lightgray;
+    letter-spacing: 10px;
+    font-size: 1.5vw;
 }
-.Contents .Months .MonthsMenu ul li a ::after {
-    content:'';
-    display: block;
-    width: 0;
-    height: 3px;
-    background: #494949;
-    transition: width .3s;
-    margin-left: 15%;
-}
-.Contents .Months .MonthsMenu ul li a :hover::after {
-    width: 80%;
-    transition: width .3s;
-    margin-left: 15%;
-}
-
-.Contents .MonthInfo{
-    background: var(--SeasonsContentBG);
-}
-.Contents .MonthInfo h1 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 20px;
-	font-size: 20px;
-	margin: 0;
-    float: center;
-}
-
-
 /*Municipalities*/
 .Contents .Municipalities{
     background: var(--MunicipalitiesBG);
@@ -475,39 +386,39 @@ input.search-bar:hover{
 }
 
 
-/*GIS*/
-.Contents .GIS{
-    background: var(--GISBG);
+/*Feeler GIS*/
+.feeler-gis{
+    background:#00334d;
+    height: 9vh;
+    font-family: poppins;
+}
+.feeler-gis h1{
+    padding-top: 25px;
     text-align: center;
+    color: lightgray;
+    letter-spacing: 10px;
+    font-size: 1.5vw;
 }
-.Contents .GIS h2 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
-}
-.Contents .GIS .gisInfo {
-    width: 50%;
-    float: left;
-    line-height: 100px;
-}
-.Contents .GIS .gisInfo p {
-	padding: 2% 0px;
-	font-family: poppins;   
-	line-height: 30px;
-    font-size: 20px;
-}
-.Contents .GIS .gisImage {
-    float: right;
-    line-height: 100px;
-    width: 50%;
-}
-.Contents .GIS .gisImage img{
-    display: inline-block;
+/*GIS*/
+.GIS{
+    background-color: #ece8d9;
+    height: 20vh;
 }
 
 
+/*Feeler Dataset*/
+.feeler-dataset{
+    background:#00334d;
+    height: 9vh;
+    font-family: poppins;
+}
+.feeler-dataset h1{
+    padding-top: 25px;
+    text-align: center;
+    color: lightgray;
+    letter-spacing: 10px;
+    font-size: 1.5vw;
+}
 /*Datasets*/
 .Contents .Datasets{
     background: var(--DatasetsBG);
