--- a/CSS/css.css
+++ b/CSS/css.css
@@ -188,19 +188,21 @@ body{
     align-items: center;
 }
 .Contents .WeatherSection .card{
-    background: #000000d0;
+    background: rgb(231, 228, 228);
     border-radius: 30px;
     padding-top: 1em;
     padding-left: 1.5em;
-    color: white;
+    color: black;
     width: 630px;
     height: 450px;
+    border-style: solid;
 }
 .Contents .WeatherSection .right{
     margin-right: 200px;
 }
 .Contents .WeatherSection .card-inside{
     margin-left: auto;
+    margin-top: 30px;
     margin-right: auto;
     width: 80%;
     font-size: 1.1vw;
@@ -214,6 +216,7 @@ body{
     outline: none;
     padding: 0.5rem;
     border-radius: 24px;
+    background: lightgray;
     color: black;
     font-family: inherit;
     font-size: 1vw;
@@ -222,19 +225,17 @@ body{
     transition: 0.2s ease-in-out;
 }
 input.search-bar:hover{
-    background: lightgray;
+    background: black;
 }
 .WeatherSection .card button {
-    margin: 1em;
-    margin-bottom: 3em;
     border-radius: 50%;
     border: none;
-    height: 2.3vw;
-    width: 2.3vw;
+    height: 2.2vw;
+    width: 2.2vw;
     outline: none;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-    background-color: white;
+    background-color: lightgray;
 }
 .WeatherSection .card button:hover{
     background: lightgray;
@@ -361,26 +362,15 @@ input.search-bar:hover{
 .Contents .Municipalities{
     background: var(--MunicipalitiesBG);
     text-align: center;
-}
-.Contents .Municipalities h2{
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
-}
-.Contents .Municipalities p{
-	padding: 2% 0px;
-	font-family: poppins;   
-	line-height: 30px;
+    height: 55vh;
 }
 .Municipalities .map-wrapper{
     display: block;
+    padding-top: 20px;
     margin-left: auto;
     margin-right: auto;
     max-width: 1700px;
 }
-
 .Municipalities .googlemap{
     width: 100%;
 }
