--- a/CSS/css.css
+++ b/CSS/css.css
@@ -199,6 +199,7 @@ body{
 }
 .Contents .WeatherSection .right{
     margin-right: 200px;
+    margin-left: 150px;
 }
 .Contents .WeatherSection .card-inside{
     margin-left: auto;
