--- a/CSS/css.css
+++ b/CSS/css.css
@@ -198,9 +198,9 @@ body{
     border-style: solid;
 }
 .Contents .WeatherSection .right{
-    margin-right: 200px;
+    margin-right: 150px;
     margin-left: 150px;
-}
+}   
 .Contents .WeatherSection .card-inside{
     margin-left: auto;
     margin-top: 30px;
@@ -393,41 +393,23 @@ input.search-bar:hover{
 /*GIS*/
 .GIS{
     background-color: #ece8d9;
-    height: 20vh;
+    height: 40vh;
 }
 
 
-/*Feeler Dataset*/
-.feeler-dataset{
-    background:#00334d;
-    height: 9vh;
+/*Footer*/
+.footer{
+    background-color: black;
     font-family: poppins;
-}
-.feeler-dataset h1{
-    padding-top: 25px;
+    color: white;
     text-align: center;
-    color: lightgray;
-    letter-spacing: 10px;
-    font-size: 1.5vw;
-}
-/*Datasets*/
-.Contents .Datasets{
-    background: var(--DatasetsBG);
-    text-align: center;
-}
-.Contents .Datasets h2 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
-}
-.Contents .Datasets p {
-	padding: 2% 0px;
-	font-family: poppins;
-	line-height: 30px;
+    font-size: 0.7vw;
+    height: 20vh;
+    padding-top: 20px;
+    line-height: 2.5;
 }
 
-.Datasets .search{
-    padding-bottom: 30px;
+.footer a{
+    color: orange;
+    font-size: 0.8vw;
 }
