--- a/CSS/css.css
+++ b/CSS/css.css
@@ -304,8 +304,86 @@ input.search-bar:hover{
 .veggy:hover{
     background-color: lightgreen;
 }
-
-
+/*Crops Modals*/
+.Crop-Section .myBtn{
+    text-align: center;
+    font-size: 0.9vw;
+    width: 15vw;
+    height: 35vh;
+    border-radius: 15px;
+}
+.myBtn:hover{
+    background-color: lightgreen;
+}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    font-family: poppins;
+    position: relative;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
 
 /*Feeler Season*/
 .feeler-season{
@@ -415,7 +493,6 @@ input.search-bar:hover{
     padding-top: 18px;
     line-height: 2.5;
 }
-
 .footer a{
     color: orange;
     font-size: 0.8vw;
@@ -428,7 +505,7 @@ input[type=text], input[type=password] {
     border: 1px solid #ccc;
     box-sizing: border-box;
   }  
-  /* Set a style for all buttons */
+/* Set a style for all buttons */
 .footer button{
     font-family: poppins;
     background-color: #04AA6D;
@@ -473,7 +550,7 @@ input[type=text], input[type=password] {
 }
   
   /* The Modal (background) */
-.footer .modal{
+.footer .modalfooter{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
