--- a/CSS/css.css
+++ b/CSS/css.css
@@ -12,7 +12,7 @@
     --BannerBG: url('../Images/Frog.jpg'); 
     --BannerTxtColor: #494949; 
 
-    --WeatherBG: url('../Images/Plant.jpg'); 
+    --WeatherBG: url('../Images/Baguio.jpg'); 
     --ChartBG:#ece8d9; 
     --MunicipalitiesBG: #ece8d9;
     --GISBG: #fffdf6;
@@ -131,34 +131,22 @@ body{
 
 /*Project ANI - Description*/
 .Banner{
-    height: 77vh;
-}
-.Banner1{
-    align-items: left;
-    position: absolute;
-    top: 10%;
-    left: 0;
+    height: 40vh;
+    text-align: center;
+    background: #ece8d9;
 }
 .Banner h2 {
-	padding-top: 100px;
-	font-size: 100px;
+	padding-top: 7%;
+	font-size: 4.5vw;
 	font-family: poppins;
 	text-transform: uppercase;
-	color: white;
+	color: black;
 }
 .Banner p {
     padding-bottom: 70px;
 	font-family: poppins;
-    font-size: 25px;
-    color: white;
-}
-.Banner video{
-    position: relative;
-    top: 9.3%;
-    left: 0;
-    width: 100%;
-    height: 70vh;
-    object-fit: cover;
+    font-size: 1vw;
+    color:black;
 }
 @media (max-width:1000px){
     .brand-title{
@@ -185,68 +173,65 @@ body{
 
 /*Weather*/
 .Contents .WeatherSection{
-	background:#ece8d9;
+	background:var(--WeatherBG);
     height: 500px;
     font-family: poppins;
 	letter-spacing: 2px;
-    padding-left: 200px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding-top: 25px;
 }
 .Contents .WeatherSection .card{
-    background: rgb(231, 228, 228);
+    background: #000000d0;
     border-radius: 30px;
-    padding-top: 1em;
-    padding-left: 1.5em;
-    color: black;
-    width: 630px;
-    height: 450px;
+    color: white;
+    width: 45vw;
+    height: 45vh;
     border-style: solid;
-}
-.Contents .WeatherSection .right{
-    margin-right: 150px;
-    margin-left: 150px;
+    margin-left: auto;
+    margin-right: auto;
 }   
 .Contents .WeatherSection .card-inside{
     margin-left: auto;
-    margin-top: 30px;
     margin-right: auto;
-    width: 80%;
+    margin-top: 30px;
+    width: 70%;
     font-size: 1.1vw;
 }
 .WeatherSection .flex{
     align-items: center;
     display: flex;
 }
+.WeatherSection .search{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
 .WeatherSection .card input.search-bar{
     border: none;
     outline: none;
-    padding: 0.5rem;
     border-radius: 24px;
-    background: lightgray;
+    background: white;
     color: black;
     font-family: inherit;
     font-size: 1vw;
-    width: 80%;
+    width: 80%; 
     cursor: pointer;
     transition: 0.2s ease-in-out;
 }
-input.search-bar:hover{
-    background: black;
+.WeatherSection input.search-bar:hover{
+    background: lightslategray;
 }
 .WeatherSection .card button {
     border-radius: 50%;
     border: none;
-    height: 2.2vw;
-    width: 2.2vw;
+    height: 5vh;
+    width: 3vw;
     outline: none;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-    background-color: lightgray;
+    background: white;
 }
 .WeatherSection .card button:hover{
-    background: lightgray;
+    background: lightslategray;
   }
   .WeatherSection .card .inside .search img{
   height:1vw; 
@@ -254,11 +239,6 @@ input.search-bar:hover{
 }
 .description {
     text-transform: capitalize;
-}
-@media (max-width: 1500px){
-    .Contents .WeatherSection{
-        padding-left: 50px;
-    }
 }
 
 /*Feeler Crops*/
@@ -409,21 +389,11 @@ input.search-bar:hover{
     display: flex;
     justify-content:space-between ;
 }
-.Season-Section .months{
-    text-align: center;
-    font-size: 0.9vw;
-    width: 13.5vw;
-    height: 35vh;
-    border-radius: 15px;
-}
-.months:hover{
-    background-color: lightskyblue;
-}
 /*Season Modals*/
 .Season-Section .myBtn-season{
     text-align: center;
     font-size: 0.9vw;
-    width: 15vw;
+    width: 13.5vw;
     height: 35vh;
     border-radius: 15px;
 }
