--- a/CSS/css.css
+++ b/CSS/css.css
@@ -344,6 +344,7 @@ body{
   
   .modal-header {
     padding: 2px 16px;
+    font-size: 1.5rem;
     background-color: #5cb85c;
     color: white;
   }
@@ -355,15 +356,21 @@ body{
       align-items: center;
     }
 
+    .modal-body .modal-information{
+        margin-left: 20px;
+        margin-right: 50px;
+    }
     .modal-body .modal-picture img{
         width: 30vw;
         height: 40vh;
+        margin-top: 15px;
+        margin-right: 30px;
+        margin-bottom: 15px;
     }
   
   .modal-footer {
-    padding: 2px 16px;
+    height: 4vh;
     background-color: #5cb85c;
-    color: white;
   }
 
 
