--- a/CSS/css.css
+++ b/CSS/css.css
@@ -691,7 +691,18 @@ body{
 /*GIS*/
 .GIS{
     background-color: #ece8d9;
-    height: 40vh;
+    height: 65vh;
+    padding-top: 25px;
+}
+.GIS #map{
+    border-radius: 30px;
+    border-style: solid;
+    border-color: black;
+    margin-left: auto;
+    margin-right: auto;
+    height:60vh;
+    width: 90vw;
+    z-index: 1;
 }
 
 
