--- a/CSS/css.css
+++ b/CSS/css.css
@@ -59,8 +59,9 @@ body{
     color: white;
 }
 .brand-title img{
-    width: 5rem;
+    width: 3.8rem;
     height: 3.5rem;
+    margin-right: 5px;
 }
 .navbar-links{
     height: 100%;
