--- a/CSS/edit.css
+++ b/CSS/edit.css
@@ -149,18 +149,69 @@
 
 /*Edit*/
 .edit{
-    padding-left: 15%;
     background: #ece8d9;
     line-height: 1.5;
-    height: 55vh;
+    height: 300vh;
     font-family: poppins;
     padding-top: 20px;
+    padding-left: 30%;
+
 }
 
 .edit input{
-    height: 3vh;
-    display: flex;
-    justify-content: space-between;
+    font-family: poppins;
+    height: 4vh;
+    width: 30vw;
+    text-indent: 15px;
+    display: block;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+/*Edit Crops*/
+.edit #cropBenefit{
+    height: 10vh;
+}
+
+.edit #cropInformation{
+    height: 10vh;
+}
+
+.edit #cropTips{
+    height: 10vh;
+}
+
+/*Edit Season*/
+.edit #seasonDescription{
+    height: 10vh;
+}
+
+.edit #seasonInformation{
+    height: 10vh;
+}
+
+/*Edit Municipality*/
+.edit #municipalityDescription{
+    height: 10vh;
+}
+
+.edit #municipalityInformation{
+    height: 10vh;
+}
+
+
+
+
+.edit button{
+    display: block;
+    font-family: poppins;
+    background-color: #04AA6D;
+    color: white;
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 10px;
+    height: 5vh;
+    width: 9vw;
 }
 
 
